--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: #282c34;
+  color: rgb(228, 210, 210);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,8 +8,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  width: 50%;
+  margin: 0 auto;
+  border: 3px solid rgb(126, 124, 124);
+  padding: 0 2em 2em;
+  margin-top: 1em;
 }
