--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 } */
+
+#dot:before {
+  content: "•";
+  margin: 0 4px
+}
+/* 
+#videocontainer { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
+
+#video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; } */
