--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,37 @@
-/* body {
-  background-color: #282c34;
-  color: rgb(228, 210, 210);
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+body {  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} */
+}
+*{
+  font-size:1.3vw;
+}
 
 #dot:before {
   content: "•";
-  margin: 0 4px
+  margin: 0 4px;
 }
-/* 
-#videocontainer { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
 
-#video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; } */
+#videocontainer {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+#video-container iframe,
+#video-container object,
+#video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* input box bg autofill */
+.MuiOutlinedInput-input:-webkit-autofill {  
+  -webkit-box-shadow: 0 0 0 100px #3b3b3b inset !important;  
+}
+
+#thumbnail:hover {opacity: 0.8;}
